added list of fruits to navbar

--- a/Navbar.html
+++ b/Navbar.html
@@ -1,5 +1,9 @@
 <html>
     <body>
         <p>this is navbar </p>
+        <ul>
+            <li>mango</li>
+            <li>banna</li>
+        </ul>
     </body>
 </html>
