--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>this is index file </h1>
+    <table>
+        <thead>
+            
+        </thead>
+    </table>
 </body>
 </html>
